--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -49,6 +49,7 @@ instance=Master
 interval=1
 signal=10
 command=/usr/share/i3blocks/volume 5 pulse
+color=#a8b1c2
 
 # Memory usage
 #
@@ -107,6 +108,7 @@ label=
 interval=10
 #min_width=CPU: 100.00%
 separator=true
+color=#a8b1c2
 
 #[load_average]
 #interval=10
@@ -119,6 +121,7 @@ separator=true
 label=
 #instance=1
 interval=30
+color=#a8b1c2
 
 # Date Time
 #
