--- a/i3/config
+++ b/i3/config
@@ -9,8 +9,9 @@
 set $bg-color 	         #611e35
 set $inactive-bg-color   #2f2f2f
 set $text-color          #f3f4f5
-set $inactive-text-color #676767
-set $urgent-bg-color     #E53935
+set $inactive-text-color #a8b1c2
+#set $urgent-bg-color     #E53935
+set $urgent-bg-color     #9b2f52
 
 # i3 config file (v4)
 #
@@ -20,7 +21,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 8
+#font pango:System San Francisco Display 8
+font pango: JetBrains Mono 8, Terminus 11px
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -58,6 +60,7 @@ bindsym $mod+Shift+q kill
 
 #start rofi
 bindsym $mod+d exec rofi -show drun -show-icons
+bindsym $mod+c exec rofi -show run
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -119,8 +122,8 @@ bindsym $mod+a focus parent
 set $ws1 "1 "
 set $ws2 "2 "
 set $ws3 "3 "
-set $ws4 "4 "
-set $ws5 "5"
+set $ws4 "4 "
+set $ws5 "5 "
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
@@ -153,8 +156,9 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 # BIND APPLICATIONS TO WORKSPACES
 assign [class="Code"] $ws3
+assign [class="Nautilus"] $ws4
 #assign [class="Spotify"] $ws4
-for_window [class="Spotify"] move to workspace $ws4
+for_window [class="Spotify"] move to workspace $ws5
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -242,5 +246,20 @@ exec_always compton -f
 # You can also use any non-zero value if you'd like to have a border
 for_window [class=".*"] border pixel 0
 
+# Logout keyboard
+mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
 
+  bindsym l exec i3-msg exit
+
+  bindsym r exec systemctl reboot
+
+  bindsym s exec systemctl shutdown
+
+  bindsym Escape mode "default"
+
+  bindsym Return mode "default"
+
+}
+
+bindsym $mod+x mode "exit: [l]ogout, [r]eboot, [s]hutdown"
 
